INCLUDES = -I$(top_srcdir)/pense
METASOURCES = AUTO
SUBDIRS = fuzzylogic
noinst_LTLIBRARIES = libalgorithms.la
libalgorithms_la_SOURCES = algorithm.cpp fuzzylogic.cpp polynomial.cpp
algorithmsincludedir = $(includedir)/pense/algorithms
algorithmsinclude_HEADERS = algorithm.h fuzzylogic.h polynomial.h
