INCLUDES = -I$(top_srcdir)/pense
METASOURCES = AUTO
noinst_LTLIBRARIES = libdevices.la
libdevices_la_SOURCES = device.cpp inputnode.cpp node.cpp outputnode.cpp
deviceincludedir = $(includedir)/pense/devices
deviceinclude_HEADERS = device.h inputnode.h node.h outputnode.h
SUBDIRS = plants sources controllers
