INCLUDES = -I$(top_srcdir)/pense
METASOURCES = AUTO
noinst_LTLIBRARIES = libfuzzylogic.la
libfuzzylogic_la_SOURCES = fobject.cpp fuzzyvalue.cpp inputtriangleset.cpp \
	outputtriangleset.cpp triangle.cpp triangleset.cpp
fuzzylogicincludedir = $(includedir)/pense/algorithms/fuzzylogic
fuzzylogicinclude_HEADERS = fobject.h fuzzyvalue.h inputtriangleset.h outputtriangleset.h \
	triangle.h triangleset.h
